<resources>
    <string name="app_name">GeoTest</string>
    <string name="question_england">London is the capital of Great Britain.</string>
    <string name="question_russia">St.Petersburg is the capital of Russia.</string>
    <string name="question_china">Beijin is the capital of China.</string>
    <string name="true_button">TRUE</string>
    <string name="false_button">FALSE</string>
    <string name="next_button">NEXT</string>
    <string name="previous_button">PREV</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="next_toast">Next</string>
    <string name="previous_toast">PREV</string>
    <string name="down">DOWN</string>
    <string name="up">UP</string>

</resources>